--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gatsby-plugin-open-graph-images",
-  "version": "0.1.5",
+  "name": "gatsby-plugin-ogi",
+  "version": "1.0.0",
   "description": "Build dynamic open-graph preview images for gatsby pages. Simply use react components to create SEO ready preview images for Twitter, Facebook, Linkedin, Google, and many more.",
   "main": "index.js",
   "scripts": {
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/squer-solutions/gatsby-plugin-open-graph-images.git"
+    "url": "git+https://github.com/neurosnap/gatsby-plugin-open-graph-images.git"
   },
   "keywords": [
     "gatsby",
@@ -21,12 +21,12 @@
     "preview",
     "image"
   ],
-  "author": "David Leitner <david.leitner@squer.at>",
+  "author": "Eric Bower <me@erock.io>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/squer-solutions/gatsby-plugin-open-graph-images/issues"
+    "url": "https://github.com/neurosnap/gatsby-plugin-open-graph-images/issues"
   },
-  "homepage": "https://github.com/squer-solutions/gatsby-plugin-open-graph-images#readme",
+  "homepage": "https://github.com/neurosnap/gatsby-plugin-open-graph-images#readme",
   "dependencies": {
     "express": "^4.17.1",
     "puppeteer": "^3.3.0"
